--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+@import "https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css";
+@import '../node_modules/@syncfusion/ej2-base/styles/material.css';
+      @import '../node_modules/@syncfusion/ej2-icons/styles/material.css';
+      @import '../node_modules/@syncfusion/ej2-buttons/styles/material.css';
+      @import '../node_modules/@syncfusion/ej2-splitbuttons/styles/material.css';
+      @import '../node_modules/@syncfusion/ej2-inputs/styles/material.css';
+      @import '../node_modules/@syncfusion/ej2-lists/styles/material.css';
+      @import '../node_modules/@syncfusion/ej2-navigations/styles/material.css';
+      @import '../node_modules/@syncfusion/ej2-popups/styles/material.css';
+      @import '../node_modules/@syncfusion/ej2-richtexteditor/styles/material.css';
+
+
+
+      @import '~ngx-toastr/toastr.css';
+      #toast-container > div {
+        opacity:1;
+    }
