--- a/src/app/pages/add-ticket/add-ticket.component.html
+++ b/src/app/pages/add-ticket/add-ticket.component.html
@@ -1,5 +1,4 @@
 <div class="container align-center addtc">
-
 <form [formGroup]="ticketform" (ngSubmit)="uploadNewTicket()" class="md-form" style="width: 60%;margin-left:20%;margin-top:5%;">
   <div class="form-group">
     <label for="inputState">Department</label>
@@ -34,7 +33,7 @@
     </div>
     <h1 style="margin-top: 20px;margin-bottom:20px;">Contact Details</h1>
     <div class="form-group">
-      <label for="subject">Contact Name{{richtxt.value}}</label>
+      <label for="subject">Contact Name</label>
       <input type="text" class="form-control" id="subject" placeholder="" formControlName="name">
     </div>
     <div class="form-group">
@@ -50,21 +49,18 @@
       <label for="inputState">Priority*</label>
       <select id="inputState" class="form-control" formControlName="priority">
         <option selected disabled>None-</option>
-        <option>PWSLab DevOps Support</option>
-        <option>iSupport</option>
-        <option>PWSLab DevOps Support</option>
-        <option>iSupport</option>
+        <option value="high">High</option>
+        <option value="low">Low</option>
       </select>
     </div>
-      <div class="form-group">
+      <!-- <div class="form-group">
           <input type="file"
                        id="file"
                        (change)="handleFileInput($event.target.files)">
-      </div>
-      
+      </div> -->
       <div class="form-group col-6">
-        <button type="submit" class="btn btn-primary">Submit</button>
-        <button class="btn btn-danger ml-2 ">Discard</button>
+        <button type="submit" class="btn btn-primary" [disabled]="!ticketform.valid">Submit</button>
+        <button class="btn btn-danger ml-2 " (click)="discard()">Discard</button>
 	    </div>
   </form>
 </div>
