--- a/src/app/pages/manage-tickets/manage-tickets.component.html
+++ b/src/app/pages/manage-tickets/manage-tickets.component.html
@@ -6,7 +6,7 @@
             <ul class="list-inline">
                  <li style="color:#c2bebe;font-weight:bold;" class="list-inline-item ">Status:</li>
                  <li class="list-inline-item colo"><a>open({{open}})</a></li>
-                 <li class="list-inline-item colo"><a>Closed({{Closed}})</a></li>
+                 <li class="list-inline-item colo"><a>Closed({{closed}})</a></li>
                  <li class="list-inline-item colo"><a>On Hold({{hold}})</a></li>
              </ul>
          </div>
@@ -28,7 +28,7 @@
             </ul>
         </div>
         <div>
-            <button class="border" style="border-radius: 50%;background:#f2f2f2;padding:0px;"><small>{{tic.contact.firstName[0]}}{{tic.contact.lastName[0]}}</small></button> . <span class="fa fa-globe"></span> . <a style="color:black !important;font-size:15px;" class=""><small>{{tic.subject}}</small></a> . <a style="color:black !important" class=""><small>{{tic.createdTime | timeAgo}}</small></a>
+            <button class="border" style="border-radius: 50%;background:#f2f2f2;padding:0px;"><small>{{tic.email[0]}}{{tic.email[1]}}</small></button> . <span class="fa fa-globe"></span> . <a style="color:black !important;font-size:15px;" class=""><small>{{tic.subject}}</small></a> . <a style="color:black !important" class=""><small>{{tic.createdTime | timeAgo}}</small></a>
         </div>
     </div>
 </div>
