--- a/src/app/pages/add-ticket/add-ticket.component.html
+++ b/src/app/pages/add-ticket/add-ticket.component.html
@@ -53,11 +53,11 @@
         <option value="low">Low</option>
       </select>
     </div>
-      <!-- <div class="form-group">
+      <div class="form-group">
           <input type="file"
                        id="file"
                        (change)="handleFileInput($event.target.files)">
-      </div> -->
+      </div>
       <div class="form-group col-6">
         <button type="submit" class="btn btn-primary" [disabled]="!ticketform.valid">Submit</button>
         <button class="btn btn-danger ml-2 " (click)="discard()">Discard</button>
