--- a/src/app/pages/add-ticket/add-ticket.component.html
+++ b/src/app/pages/add-ticket/add-ticket.component.html
@@ -1,26 +1,26 @@
 <div class="container align-center addtc">
-<form [formGroup]="ticketform" (ngSubmit)="uploadNewTicket()" class="md-form" style="width: 60%;margin-left:20%;margin-top:5%;">
+<form [formGroup]="ticketform" (ngSubmit)="uploadFileToActivity()" class="md-form" style="width: 60%;margin-left:20%;margin-top:5%;" enctype="multipart/form-data">
   <div class="form-group">
     <label for="inputState">Department</label>
-    <select id="inputState" class="form-control" formControlName="department">
-      <option selected disabled>Choose...</option>
-      <option value="PWSLab DevOps Support">PWSLab DevOps Support</option>
-      <option value="iSupport">iSupport</option>
-    </select>
+      <select id="inputState" class="form-control" formControlName="departmentId">
+        <option selected disabled>Choose...</option>
+        <option value="7189000000051431">PWSLab DevOps Support</option>
+        <option value="7189000001062045">iSupport</option>
+      </select>
   </div>
   <div class="form-group ">
     <label for="inputState">Category</label>
     <select id="inputState" class="form-control" formControlName="category">
       <option selected disabled>None-</option>
-      <option>PWSLab DevOps Support</option>
-      <option>iSupport</option>
-      <option>PWSLab DevOps Support</option>
-      <option>iSupport</option>
+      <option value="DevSecOps Pipeline Setup">DevSecOps Pipeline Setup</option>
+      <option value="CI/CD pipeline failure">CI/CD pipeline failure</option>
+      <option value="DevSecOps Pipeline Setup">DevSecOps Pipeline Setup</option>
+      <option value="CI/CD pipeline failure">CI/CD pipeline failure</option>
     </select>
   </div>
     <div class="form-group">
       <label for="inputAddress">PWSLab Project URL </label>
-      <input type="text" class="form-control" id="inputAddress" placeholder="" formControlName="pwslab">
+      <input type="text" class="form-control" id="inputAddress" placeholder="" formControlName="cf">
     </div>
     <div class="form-group">
       <label for="subject">Subject</label>
@@ -34,7 +34,7 @@
     <h1 style="margin-top: 20px;margin-bottom:20px;">Contact Details</h1>
     <div class="form-group">
       <label for="subject">Contact Name</label>
-      <input type="text" class="form-control" id="subject" placeholder="" formControlName="name">
+      <input type="text" class="form-control" id="subject" placeholder="" formControlName="contactName">
     </div>
     <div class="form-group">
       <label for="subject">Email</label>
@@ -49,8 +49,8 @@
       <label for="inputState">Priority*</label>
       <select id="inputState" class="form-control" formControlName="priority">
         <option selected disabled>None-</option>
-        <option value="high">High</option>
-        <option value="low">Low</option>
+        <option value="High - Production System Down">High</option>
+        <option value="Medium - System Impaired">Medium</option>
       </select>
     </div>
       <div class="form-group">
@@ -59,7 +59,7 @@
                        (change)="handleFileInput($event.target.files)">
       </div>
       <div class="form-group col-6">
-        <button type="submit" class="btn btn-primary" [disabled]="!ticketform.valid">Submit</button>
+        <button type="submit" class="btn btn-primary" >Submit</button>
         <button class="btn btn-danger ml-2 " (click)="discard()">Discard</button>
 	    </div>
   </form>
