--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
-<div class="container login-box ">
-    <div class="col-lg-5 col-md-5 col-sm-12 float-left border border-ligh">
+<div class="container  ">
+    <div class=" login-box col-lg-5 col-md-5 col-sm-12 float-left border border-ligh">
         <form [formGroup]="loginForm" (ngSubmit) = "login()" class="">
             <div class="logo"></div>
             <h2 class="mb-4">Login</h2>
