--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -97,20 +97,20 @@
           </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-                <a class="nav-link" routerLink="/">Home <span class="sr-only">(current)</span></a>
-              </li>
+            <!-- <li [routerLinkActive]="['active']" class="nav-item">
+                <a class="nav-link" routerLink="/">Home</a>
+              </li> -->
              
-              <li class="nav-item">
+              <li [routerLinkActive]="['active']" class="nav-item">
                 <a class="nav-link" routerLink="/newtc">Add Ticket</a>
               </li>
-              <li class="nav-item">
+              <li [routerLinkActive]="['active']" class="nav-item">
                 <a class="nav-link" routerLink="/managetc">Manage Ticket</a>
               </li>
-              <li class="nav-item" *ngIf='isLoggedIn()'>
+              <li [routerLinkActive]="['active']" class="nav-item" *ngIf='isLoggedIn()'>
                 <a class="nav-link" (click)="logout()" routerLink="/login">Log Out</a>
               </li>
-              <li class="nav-item" *ngIf='!isLoggedIn()'>
+              <li [routerLinkActive]="['active']" class="nav-item" *ngIf='!isLoggedIn()'>
                 <a class="nav-link"  routerLink="/login">Sign In</a>
               </li>
         </ul>
