--- a/src/app/pages/add-ticket/add-ticket.component.css
+++ b/src/app/pages/add-ticket/add-ticket.component.css
@@ -6,7 +6,11 @@
     .e-richtexteditor .e-rte-content .e-content, .e-richtexteditor .e-source-content .e-content {
         height: 400px !important;
     }
-
+    .ellipsis { 
+        overflow: hidden; 
+        white-space: nowrap; 
+        text-overflow: ellipsis !important; 
+    } 
 
     #pic{
         display: none;
