--- a/src/app/pages/manage-tickets/manage-tickets.component.html
+++ b/src/app/pages/manage-tickets/manage-tickets.component.html
@@ -28,7 +28,7 @@
             </ul>
         </div>
         <div>
-            <button class="border" style="border-radius: 50%;background:#f2f2f2;padding:0px;"><small>{{tic.email[0]}}{{tic.email[1]}}</small></button> . <span class="fa fa-globe"></span> . <a style="color:black !important;font-size:15px;" class=""><small>{{tic.subject}}</small></a> . <a style="color:black !important" class=""><small>{{tic.createdTime | timeAgo}}</small></a>
+            <button class="border" style="border-radius: 50%;background:#f2f2f2;padding:0px;"><small>{{tic.subject[0]}}{{tic.subject[1]}}</small></button> . <span class="fa fa-globe"></span> . <a style="color:black !important;font-size:15px;" class=""><small>{{tic.subject}}</small></a> . <a style="color:black !important" class=""><small>{{tic.createdTime | timeAgo}}</small></a>
         </div>
     </div>
 </div>
